# mcp-hello-world

./: README.md  pyproject.toml
src/mcp_hello_world/: server.py
